feat: track and prune inactive viewers
